			irker history 

2.8: 2014-05-30
  Various minor improvements to irk.
  Cope better with branch names containing slashes.

2.7 @ 2014-03-15
  Add support for ircs:// and SSL/TLS connections to IRC servers.
  Add support for per-URL usernames and passwords.

2.6 @ 2014-02-04
   Fix for an infinite loop on failing to connect to IRC

2.5 @ 2013-12-24
   Bug fix - remove a deadlock we inherited from irclib.

2.4 @ 2013-12-03
   Bug fix release - some users reported failure to connect with 2.3.
   Also prevent a crash if Unicode shows up in the wrong place.

2.3 @ 2013-11-30
  -i option enables immediate sending of one line in foreground.

2.2 @ 2013-11-29
  Fixed Unicode processing - got busted in 2.0 when irclib was removed.
  Show Python traceback on higher debug levels.

2.1 @ 2013-11-26
  A performance improvement in the git repository hook.
  Documentation polishing.

2.0 @ 2013-11-16
  The dependency on irclib is gone.
  An email delivery method, suitable for use on SourceForge.
  irkerhook can now be used as a hg changegroup hook.
  Prevent misbehavior on UTF-8 in commit metadata.
  Fix a crash bug on invalid hostnames.

1.20 @ 2013-05-17
  Compatibility back to Python 2.4 (provided simplejson is present).
  Increased anti-flood delay to avoid trouble with freenode.

1.19 @ 2013-05-06
  Fixed a minor bug in argument processing

1.18 @ 2013-04-16
  Added -l option; irker can now be used as a channel monitor.
  Added -n and -p option: the nick can be forced and authenticated.

1.17 @ 2013-02-03
  Various minor fixes and bulletproofing.

1.16 @ 2013-01-24
  Deal gracefully with non-ASCII author names and '|' in the command line.

1.15 @ 2012-12-08
  Don't append an extra newline in the Subversion hook.

1.14 @ 2012-11-26
  irclib 5.0 and urlparse compatibility fixes.

1.13 @ 2012-11-06
  Fix for a very rare thread race found by AI0867.
  Work around a midesign in the IRC library.

1.12 @ 2012-10-11